k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "goserver"
  labels:
    app: "goserver"
spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 1
  template:
    metadata:
      labels:
        app: "goserver"
    spec:
      containers:
        - name: goserver
          image: "pedrohca/kube-go:v7"
          volumeMounts:
            - mountPath: "/go/myTasks"
              name: config

      volumes:
        - name: config
          configMap:
            name: configmap-task
            items:
            - key: tasks
              path: "task.txt"
